--- a/docs/guides/cloud-account-structure.mdx
+++ b/docs/guides/cloud-account-structure.mdx
@@ -24,3 +24,9 @@ Within an access policy, you can specify permissions by selecting _platform_ and
 <Admonition type="Note">
 This guide describes a simplified representation of the IAM model. For full details, refer to the [IBM Cloud IAM documentation.](https://cloud.ibm.com/docs/account?topic=account-iamoverview)
 </Admonition>
+
+## Roles
+
+**Platform management** roles define allowable actions, such as assigning user access and creation of service instances, for managing resources at the platform level. Platform roles also apply to actions that can be taken within the context of account management services, such as inviting and removing users, managing access groups, managing service IDs, and private catalog products.
+
+**Service access** roles define allowable actions, such as calling service APIs or accessing a service's dashboard. These roles are customized based on the service that is selected within the policy.
