--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -34,6 +34,8 @@ The instances that you can access are listed at the bottom of your [Account page
 <CloudContent>
 Access to IBM Quantum Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.
 
+An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique CRN.  This CRN is used when sending workloads from your Qiskit programs.
+
 Users with a public account can create an instance in the [Open Plan](#open-plan). For organizations outside of IBM&reg;, the organization's administrator assigns users to instances.
 
 The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/) displays the instances to which you have access.
