--- a/docs/api/qiskit-addon-obp/release-notes.mdx
+++ b/docs/api/qiskit-addon-obp/release-notes.mdx
@@ -10,13 +10,51 @@ in_page_toc_max_heading_level: 2
 
 # Operator backpropagation (OBP) release notes
 
-<span id="release-notes-0-1-0" />
+<span id="release-notes-0-2-0" />
 
 <span id="id2" />
+
+## 0.2.0
+
+<span id="release-notes-0-2-0-new-features" />
+
+### New Features
+
+*   A new parameter `show_legend` has been added to each function in the [`qiskit_addon_obp.utils.visualization`](utils-visualization#module-qiskit_addon_obp.utils.visualization "qiskit_addon_obp.utils.visualization") module that can show or hide the legend on a plot. The legend is shown by default. This can be useful when the legend becomes long and obstructs the plot.
+
+*   [`qiskit_addon_obp.utils.simplify.OperatorBudget`](utils-simplify#operatorbudget "qiskit_addon_obp.utils.simplify.OperatorBudget") now holds `atol` and `rtol` fields which are absolute and relative tolerances used to determine whether coefficients are zero while simplifying an operator.
+
+*   [`truncate_binary_search()`](utils-truncating#truncate_binary_search "qiskit_addon_obp.utils.truncating.truncate_binary_search") now accepts a `tol` kwarg. Once an optimal truncation threshold, up to this value, has been found, the search for an optimal threshold will stop. The default tolerance is `1e-8`; whereas, the tolerance used prior to this release was `1e-10`.
+
+    [`TruncationErrorBudget`](utils-truncating#truncationerrorbudget "qiskit_addon_obp.utils.truncating.TruncationErrorBudget") now holds a `tol` field. This field is used by [`backpropagate()`](qiskit-addon-obp#backpropagate "qiskit_addon_obp.backpropagate") as the `tol` argument to [`truncate_binary_search()`](utils-truncating#truncate_binary_search "qiskit_addon_obp.utils.truncating.truncate_binary_search").
+
+<span id="release-notes-0-2-0-upgrade-notes" />
+
+### Upgrade Notes
+
+*   This release adds support for Python 3.13. No code changes were necessary, so older releases are expected to work on Python 3.13 too.
+
+*   This package is now compatible with Qiskit SDK 2.0.
+
+<span id="release-notes-0-2-0-bug-fixes" />
+
+### Bug Fixes
+
+*   The [`num_duplicate_paulis`](utils-simplify#num_duplicate_paulis "qiskit_addon_obp.utils.simplify.SimplifyMetadata.num_duplicate_paulis") was previously unable to differentiate from Pauli terms that were trimmed due to their coefficient being close to zero. This is now tracked correctly with these trimmed terms only counting towards [`num_trimmed_paulis`](utils-simplify#num_trimmed_paulis "qiskit_addon_obp.utils.simplify.SimplifyMetadata.num_trimmed_paulis").
+
+*   The reported number of unique Paulis in [`num_unique_paulis`](utils-simplify#num_unique_paulis "qiskit_addon_obp.utils.simplify.SimplifyMetadata.num_unique_paulis") is now correct in cases where all gates in a slice commute with an observable.
+
+*   Fixed a bug in [`qiskit_addon_obp.backpropagate()`](qiskit-addon-obp#backpropagate "qiskit_addon_obp.backpropagate") which caused slices with depth > 1 to be incorrectly forward-propagated. Gates from a given slice will now be correctly propagated into the observable in reverse order (i.e., from the back of the slice).
+
+<span id="release-notes-0-1-0" />
+
+<span id="id3" />
 
 ## 0.1.0
 
 <span id="release-notes-0-1-0-new-features" />
+
+<span id="id4" />
 
 ### New Features
 
@@ -29,6 +67,8 @@ in_page_toc_max_heading_level: 2
 *   Introduced a new function, [`setup_budget()`](utils-truncating#setup_budget "qiskit_addon_obp.utils.truncating.setup_budget"), which generates a [`TruncationErrorBudget`](utils-truncating#truncationerrorbudget "qiskit_addon_obp.utils.truncating.TruncationErrorBudget") class, given an observable truncation strategy (e.g. `max_error_total`, `max_error_per_slice`, `p_norm`).
 
 <span id="release-notes-0-1-0-upgrade-notes" />
+
+<span id="id5" />
 
 ### Upgrade Notes
 
@@ -98,6 +138,8 @@ in_page_toc_max_heading_level: 2
 *   Removed the `per_slice_budget`, `max_error_total`, and `p_norm` fields from the [`OBPMetadata`](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata") class. These fields will now be accessed through the new `truncation_error_budget` field, which holds a [`TruncationErrorBudget`](utils-truncating#truncationerrorbudget "qiskit_addon_obp.utils.truncating.TruncationErrorBudget") instance.
 
 <span id="release-notes-0-1-0-bug-fixes" />
+
+<span id="id6" />
 
 ### Bug Fixes
 
