--- a/docs/api/qiskit-addon-obp/utils-visualization.mdx
+++ b/docs/api/qiskit-addon-obp/utils-visualization.mdx
@@ -18,7 +18,7 @@ Various visualization utilities.
 
 ### plot\_accumulated\_error
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_accumulated_error" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L24-L84" signature="plot_accumulated_error(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_accumulated_error" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L24-L84" signature="plot_accumulated_error(metadata, axes, *, show_legend=True)">
   Plot the accumulated error.
 
   This method populates the provided figure axes with a line-plot of the [`OBPMetadata.accumulated_error()`](utils-metadata-obp-metadata#accumulated_error "qiskit_addon_obp.utils.metadata.OBPMetadata.accumulated_error"). Below is an example where we plot some `metadata` which exists within our context.
@@ -40,6 +40,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -48,7 +49,7 @@ Various visualization utilities.
 
 ### plot\_left\_over\_error\_budget
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_left_over_error_budget" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L87-L132" signature="plot_left_over_error_budget(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_left_over_error_budget" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L87-L134" signature="plot_left_over_error_budget(metadata, axes, *, show_legend=True)">
   Plot the left-over error budget.
 
   This method populates the provided figure axes with a line-plot of the [`OBPMetadata.left_over_error_budget()`](utils-metadata-obp-metadata#left_over_error_budget "qiskit_addon_obp.utils.metadata.OBPMetadata.left_over_error_budget"). Below is an example where we plot some `metadata` which exists within our context.
@@ -68,6 +69,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -76,7 +78,7 @@ Various visualization utilities.
 
 ### plot\_slice\_errors
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_slice_errors" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L135-L187" signature="plot_slice_errors(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_slice_errors" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L137-L190" signature="plot_slice_errors(metadata, axes, *, show_legend=True)">
   Plot the slice errors.
 
   This method populates the provided figure axes with a bar-plot of the truncation error incurred at each backpropagated slice. Below is an example where we plot some `metadata` which exists within our context.
@@ -98,6 +100,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -106,7 +109,7 @@ Various visualization utilities.
 
 ### plot\_num\_paulis
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_num_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L190-L235" signature="plot_num_paulis(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_num_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L193-L238" signature="plot_num_paulis(metadata, axes, *, show_legend=True)">
   Plot the number of Pauli terms.
 
   This method populates the provided figure axes with a line-plot of the number of Pauli terms at each backpropagated slice. Below is an example where we plot some `metadata` which exists within our context.
@@ -128,6 +131,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -136,7 +140,7 @@ Various visualization utilities.
 
 ### plot\_num\_truncated\_paulis
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_num_truncated_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L238-L290" signature="plot_num_truncated_paulis(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_num_truncated_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L241-L295" signature="plot_num_truncated_paulis(metadata, axes, *, show_legend=True)">
   Plot the number of truncated Pauli terms.
 
   This method populates the provided figure axes with a bar-plot of the number of the truncated Pauli terms at each backpropagated slice. Below is an example where we plot some `metadata` which exists within our context.
@@ -158,6 +162,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -166,7 +171,7 @@ Various visualization utilities.
 
 ### plot\_sum\_paulis
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_sum_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L293-L347" signature="plot_sum_paulis(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_sum_paulis" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L298-L352" signature="plot_sum_paulis(metadata, axes, *, show_legend=True)">
   Plot the total number of all Pauli terms.
 
   This method populates the provided figure axes with a line-plot of the total number of all Pauli terms at each backpropagated slice. Below is an example where we plot some `metadata` which exists within our context.
@@ -188,6 +193,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
@@ -196,7 +202,7 @@ Various visualization utilities.
 
 ### plot\_num\_qwc\_groups
 
-<Function id="qiskit_addon_obp.utils.visualization.plot_num_qwc_groups" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.1/qiskit_addon_obp/utils/visualization.py#L350-L400" signature="plot_num_qwc_groups(metadata, axes)">
+<Function id="qiskit_addon_obp.utils.visualization.plot_num_qwc_groups" github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/visualization.py#L355-L405" signature="plot_num_qwc_groups(metadata, axes, *, show_legend=True)">
   Plot the number of qubit-wise commuting Pauli groups.
 
   This method populates the provided figure axes with a line-plot of the number of qubit-wise commuting Pauli groups at each backpropagated slice. Below is an example where we plot some `metadata` which exists within our context.
@@ -216,6 +222,7 @@ Various visualization utilities.
 
   *   **metadata** ([*OBPMetadata*](utils-metadata-obp-metadata "qiskit_addon_obp.utils.metadata.OBPMetadata")) – the metadata to be visualized.
   *   **axes** (*Axes*) – the matplotlib axes in which to plot.
+  *   **show\_legend** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – enable/disable showing the legend in the plot.
 
   **Return type**
 
